- 'aiv' command will now indicate whether or not AI is on.
- "You [successfully refined/failed to refine] a weapon!" message implemented.
  (packet switch 018F)
- "storage [add|get]" commands now support item names,
  e.g. "storage get +5 Sword Mace [Andre]"
  Currently, item names containing commas may not work properly.
- "version" command tells you what version of openkore you are running.

New config options:
- beepOnPM, beepOnChat if set to 1 will generate a beep when you
  hear a PM/public chat message.
- The attackSkillSlot and attackComboSlot blocks now have an extra option:
  isSelfSkill (flag)
  This specifies whether the combo skill is used on yourself.
- _defendMonsters consition, e.g.:
  partySkill Pneuma {
	  lvl 1
      target_defendMonsters Raydric Archer
  }
  will only cast this skill if a Raydric Archer's last attack hit the person.
- verboseDomains is the opposite of squelchDomains.
- missDamage; any damage you do <= this amount will be counted as a miss.
  (e.g. for monks who have Spirit Spheres)
- teleportAuto_useSP if set to 2 will only use SP when other players are 
  present.
- EXPERIMENTAL _misses and _totalMisses conditions, e.g. to switch elemental
  weapons using equipAuto when you are missing a monster that changed
  elements.
- shopTitleOversize (flag)
  chatTitleOversize (flag)
  if set to 1 will enable shop title or chatroom title length longer than 36 characters.
- pauseMapServer (seconds)
  Pause for (seconds) before connect to map server (Sometime server slower than bots).

New commands:
- ihist
  Display last few entries of the item log.
- move [Portal Number]
  To move into portal if portals exist.

Internal:
- $interface->beep() function for cross-platform beep support.
- OpenKore will exit if a plugin failed to load.
- OpenKore will exit if a configuration file failed to load.
- checkMonsterCondition() now takes a monster hash instead of monster ID.
  (Perhaps other similar functions should be converted too)